--- a/index.ipynb
+++ b/index.ipynb
@@ -102,15 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-bc978ba330fa>, line 10)",
+     "evalue": "invalid syntax (<ipython-input-7-c4124a7546f4>, line 14)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-bc978ba330fa>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    def y_values_for_at_six(x_values):\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-c4124a7546f4>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    return list(map(lambda x_value: three_x_y_at_ nine(x_value), x_values))\u001b[0m\n\u001b[0m                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
     "    return list(map(lambda x_value: three_x_y_at_one(x_value), x_values))\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
-    "    return list(map(lambda x_value: three_x_y_at_three(x_value), x_values)\n",
+    "    return list(map(lambda x_value: three_x_y_at_three(x_value), x_values))\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
     "    return list(map(lambda x_value: three_x_y_at_six(x_value), x_values))\n",
