--- a/index.ipynb
+++ b/index.ipynb
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
-    "    pass"
+    "    retu"
    ]
   },
   {
