--- a/index.ipynb
+++ b/index.ipynb
@@ -1292,22 +1292,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
-    "    retu"
+    "    return 18"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    pass"
+    "    return 27"
    ]
   },
   {
