--- a/index.ipynb
+++ b/index.ipynb
@@ -1319,12 +1319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx_3xy(x_value, y_value):\n",
-    "    return 3*y"
+    "    return 3*y_value"
    ]
   },
   {
